--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>30kW_MASTER_FPGA_without_CLA_250218G</name>
+	<name>Haba_G2</name>
 	<comment></comment>
 	<projects>
 	</projects>
