--- a/.cproject
+++ b/.cproject
@@ -223,7 +223,7 @@
                         </toolChain>
                     </folderInfo>
                     <sourceEntries>
-                        <entry excluding="F28069_RAM_custom.cmd|RAM" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+                        <entry excluding="modbus_legacy.h|modbus_legacy.c|F28069_RAM_custom.cmd|RAM" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
                     </sourceEntries>
                 </configuration>
             </storageModule>
