--- a/.project
+++ b/.project
@@ -26,6 +26,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>DCL_PI_C1.asm</name>
+			<type>1</type>
+			<locationURI>COM_TI_C2000WARE_INSTALL_DIR/libraries/control/DCL/c28/source/DCL_PI_C1.asm</locationURI>
+		</link>
+		<link>
 			<name>DCL_clamp_C1.asm</name>
 			<type>1</type>
 			<locationURI>COM_TI_C2000WARE_INSTALL_DIR/libraries/control/DCL/c28/source/DCL_clamp_C1.asm</locationURI>
@@ -34,11 +39,6 @@
 			<name>DCL_futils.asm</name>
 			<type>1</type>
 			<locationURI>COM_TI_C2000WARE_INSTALL_DIR/libraries/control/DCL/c28/source/DCL_futils.asm</locationURI>
-		</link>
-		<link>
-			<name>DCL_PI_C1.asm</name>
-			<type>1</type>
-			<locationURI>COM_TI_C2000WARE_INSTALL_DIR/libraries/control/DCL/c28/source/DCL_PI_C1.asm</locationURI>
 		</link>
 		<link>
 			<name>F2806x_Adc.c</name>
@@ -94,6 +94,21 @@
 			<name>F2806x_PieVect.c</name>
 			<type>1</type>
 			<locationURI>COM_TI_C2000WARE_INSTALL_DIR/device_support/F2806x/common/source/F2806x_PieVect.c</locationURI>
+		</link>
+		<link>
+			<name>F2806x_Sci.c</name>
+			<type>1</type>
+			<locationURI>COM_TI_C2000WARE_INSTALL_DIR/device_support/F2806x/common/source/F2806x_Sci.c</locationURI>
+		</link>
+		<link>
+			<name>F2806x_Spi.c</name>
+			<type>1</type>
+			<locationURI>COM_TI_C2000WARE_INSTALL_DIR/device_support/F2806x/common/source/F2806x_Spi.c</locationURI>
+		</link>
+		<link>
+			<name>F2806x_SysCtrl.c</name>
+			<type>1</type>
+			<locationURI>COM_TI_C2000WARE_INSTALL_DIR/device_support/F2806x/common/source/F2806x_SysCtrl.c</locationURI>
 		</link>
 		<link>
 			<name>F2806x_usDelay.asm</name>
